# cpp-demo

demo_project/: .clang-format  CMakeLists.txt  _active_config.bat  _build.bat  _rebuild.bat  _run.bat  actions.py  format.py  list_presets.bat  vcpkg.json
demo_project/cmake/: lang_cxx.cmake
demo_project/demo_project/: demo_project.cpp  demo_project.h  test.cpp  test.h  to_str.cpp  to_str.h  to_str.test.cpp
demo_project/test/: integration_tests.cpp  run_tests.cpp  run_tests.h
lib_tests/: CMakeLists.txt  CMakePresets.json  README.md  actions.py  format.py  setvars.bat  vcpkg.json
lib_tests/lib_tests/: exprtk.cpp  fmt.cpp  magic-enum.cpp  ms-gsl.cpp  nameof.cpp  nlohmann_json.cpp  p-ranav-csv2.cpp  poco.cpp  range-v3.cpp  rapidcsv.cpp  strong-type.cpp  tabulate.cpp  tl-ranges.cpp  vincentlaucsb-csv-parser.cpp
lib_tests/lib_tests/data/csv/: data1_lf.csv  data3_utf8bom_lf.csv
libs/: README.md  format.py
libs/_common/: CMakeLists.txt  CMakePresets.json  _build_and_run.bat
libs/_template/: CMakeLists.txt  main.cpp  vcpkg.json
libs/fmt/: CMakeLists.txt  _build_and_run.bat  main.cpp  vcpkg.json
libs/magic-enum/: CMakeLists.txt  main.cpp  vcpkg.json
libs/ms-gsl/: CMakeLists.txt  main.cpp  vcpkg.json
libs/p-ranav-csv2/: CMakeLists.txt  main.cpp  vcpkg.json
libs/p-ranav-csv2/data/: .gitattributes  test2_crlf.csv
libs/poco/: CMakeLists.txt  main.cpp  vcpkg.json
libs/range-v3/: CMakeLists.txt  CMakePresets.json  main.cpp  vcpkg.json
libs/strong-type/: CMakeLists.txt  main.cpp  vcpkg.json
libs/tabulate/: CMakeLists.txt  main.cpp  vcpkg.json
libs/tl-ranges/: CMakeLists.txt  main.cpp  vcpkg.json
